# cep18-meme

./: .env.example  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  justfile
resources/casper_contract_schemas/: cep18_meme_schema.json
resources/legacy/: cep18_meme_schema.json
src/: token.rs
wasm/: Cep18Meme.wasm
