[package]
name = "cep18_meme"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.2.0", features = [], default-features = false }
odra-modules = { version = "1.2.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "1.2.0", features = [], default-features = false, optional = true}

[dev-dependencies]
odra-test = { version = "1.2.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "1.2.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "1.2.0", features = [], default-features = false }

[[bin]]
name = "cep18_meme_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cep18_meme_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["odra-livenet"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[features]
odra-livenet = ["odra-casper-livenet-env"]